# yevice

./: .gitignore  .pinact.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  actrun.toml  deny.toml  mise.toml
crates/cli/yevice-cli/: Cargo.toml
crates/cli/yevice-cli/src/: commands.rs  main.rs  render.rs
crates/cli/yevice-cli/tests/: capacity_tests.rs  cdp_architecture_tests.rs  connection_edge_tests.rs  container_web_tests.rs  data_pipeline_tests.rs  event_driven_tests.rs  integration_test.rs  multi_input_cli_tests.rs  serverless_api_tests.rs
crates/cli/yevice-cli/tests/common/: mod.rs
crates/cli/yevice-cli/tests/fixtures/: async-api.yml  batch-job.yml  batch-scenario.yml  catalog-aoss.yml  catalog-indexing.sam.yml  cdn-static-website.yml  events-rule.yml  express-workflow.yml  fargate-dev.yml  fargate-production.yml  fargate-web-app.yml  firehose-delivery.yml  imports.yaml  orders-ingest.sam.yml  orders-kinesis.yml  params-dev.yaml  params-prd.yaml  provisioned-dynamodb.yml  s3-notification.yml  sam-events.yml  serverless-http-api.yml  serverless-rest-api.yml  serverless-with-waf.yml  shared-dynamodb.yml  shared-s3.yml  shared-sqs.yml  sns-subscription.yml  sqs-fanout.yml  step-functions-workflow.yml  streaming-pipeline.yml  usage-hierarchical.yaml  usage.yaml  vpc-with-nat.yml
crates/core/yevice-core/: Cargo.toml
crates/core/yevice-core/src/: bindings.rs  capacity.rs  cost.rs  currency.rs  error.rs  evaluate.rs  expr.rs  expr_introspect.rs  expr_parser.rs  fx.rs  io.rs  lib.rs  optimize.rs  parse_policy.rs  resource.rs  schema.rs  simulate.rs  topology.rs  types.rs
crates/core/yevice-core/tests/: core_branch_behavior.rs
crates/core/yevice-pricing/: Cargo.toml
crates/core/yevice-pricing/src/: bulk_api.rs  catalog.rs  download.rs  error.rs  file_registry.rs  gcp_model.rs  gcp_registry.rs  lib.rs  model.rs  noop.rs  provider.rs  registry.rs
crates/core/yevice-pricing/tests/: bulk_api_behavior.rs  file_registry_behavior.rs  mutant_behavior.rs  registry_tables.rs
crates/core/yevice-service-api/: Cargo.toml
crates/core/yevice-service-api/src/: catalog.rs  error.rs  iac.rs  lib.rs  plugin.rs  pricing_resolver.rs  service.rs
crates/engine/yevice-engine/: Cargo.toml
crates/engine/yevice-engine/src/: architecture.rs  error.rs  generate.rs  input.rs  lib.rs  registry.rs
crates/iac/yevice-cfn/: Cargo.toml
crates/iac/yevice-cfn/src/: convert.rs  error.rs  intrinsic.rs  lib.rs  parser.rs  resolved.rs  sentinel.rs
crates/iac/yevice-tf/: Cargo.toml
crates/iac/yevice-tf/src/: convert.rs  error.rs  lib.rs  parser.rs  resolver.rs
crates/iac/yevice-tf/tests/: integration_test.rs
crates/iac/yevice-tf/tests/fixtures/: classify_connection.tf  cross_resource.tf  gcp_simple.tf  local_ref.tf  multi_resource.tf  nested_ref.tf  non_runtime_blocks.tf  s3_notification.tf  simple_lambda.tf  terraform.tfvars  variables.tf
crates/iac/yevice-wrangler/: Cargo.toml
crates/iac/yevice-wrangler/src/: error.rs  lib.rs  parser.rs  plugin.rs  services.rs
crates/iac/yevice-wrangler/tests/: integration_test.rs
crates/iac/yevice-wrangler/tests/fixtures/: wrangler_full.toml  wrangler_simple.toml
crates/output/yevice-output/: Cargo.toml
crates/output/yevice-output/src/: drawio.rs  error.rs  json.rs  lib.rs  mermaid.rs
crates/services/yevice-services-aws/: Cargo.toml
crates/services/yevice-services-aws/src/: common.rs  connection_rules.rs  lib.rs  macros.rs  plugin.rs  pricing_adapter.rs  pricing_provider.rs  quotas.rs
crates/services/yevice-services-aws/src/cfn/: alb.rs  api_gateway.rs  appsync.rs  athena.rs  backup.rs  batch.rs  bedrock.rs  cloudfront.rs  cloudtrail.rs  cloudwatch.rs  cloudwatch_logs.rs  cognito.rs  container_insights.rs  data_transfer.rs  directory_service.rs  documentdb.rs  dynamodb.rs  ebs.rs  ec2.rs  ecr.rs  ecs.rs  efs.rs  eks.rs  elasticache.rs  eventbridge_rule.rs  eventbridge_scheduler.rs  firehose.rs  fsx_windows.rs  glue.rs  guardduty.rs  kendra.rs  kinesis.rs  lambda.rs  lightsail.rs  mod.rs  msk.rs  nat_gateway.rs  opensearch_serverless.rs  opensearch_service.rs  quicksight.rs  (+11 more)
crates/services/yevice-services-aws/src/services/: alb.rs  api_gateway.rs  appsync.rs  athena.rs  backup.rs  batch.rs  bedrock.rs  cloudfront.rs  cloudtrail.rs  cloudwatch.rs  cloudwatch_logs.rs  cognito.rs  container_insights.rs  data_transfer.rs  directory_service.rs  documentdb.rs  dynamodb.rs  ebs.rs  ec2.rs  ecr.rs  ecs_ec2.rs  ecs_fargate.rs  efs.rs  eks.rs  elasticache.rs  eventbridge_rule.rs  eventbridge_scheduler.rs  firehose.rs  fsx_windows.rs  glue.rs  guardduty.rs  kendra.rs  kinesis.rs  lambda.rs  lightsail.rs  mod.rs  msk.rs  nat_gateway.rs  opensearch_serverless.rs  opensearch_service.rs  (+12 more)
crates/services/yevice-services-aws/src/tf/: api_gateway.rs  batch.rs  cloudfront.rs  cloudwatch_logs.rs  dynamodb.rs  ec2.rs  ecr.rs  ecs.rs  elasticache.rs  eventbridge_scheduler.rs  kinesis.rs  lambda.rs  mod.rs  nat_gateway.rs  opensearch_serverless.rs  rds.rs  s3.rs  sqs.rs  step_functions.rs
crates/services/yevice-services-aws/tests/: build_cost_amounts.rs  mutant_branch_behavior.rs  pricing_adapter_smoke.rs  registration_consistency.rs
crates/services/yevice-services-gcp/: Cargo.toml
crates/services/yevice-services-gcp/src/: lib.rs  plugin.rs  pricing_adapter.rs
crates/services/yevice-services-gcp/src/services/: bigquery.rs  cloud_function.rs  cloud_run.rs  cloud_sql.rs  cloud_storage.rs  mod.rs  pubsub.rs
crates/services/yevice-services-gcp/src/tf/: bigquery.rs  cloud_function.rs  cloud_run.rs  cloud_sql.rs  cloud_storage.rs  (+1 more)
crates/services/yevice-services-gcp/tests/: build_cost_amounts.rs  mutant_branch_behavior.rs  registration_consistency.rs
crates/solver/yevice-solver/: Cargo.toml
crates/solver/yevice-solver/benches/: solve.rs
crates/solver/yevice-solver/src/: error.rs  expr_pre_checks.rs  highs_backend.rs  lib.rs  milp.rs  milp_encoder.rs
crates/solver/yevice-solver/tests/: highs_vs_enumeration.rs  solver_property.proptest-regressions  solver_property.rs
(+56 files in other folders)
