[package]
name = "yevice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Command-line interface for the yevice cost-model toolkit (CloudFormation/Terraform → cost function)"
keywords = ["aws", "cost", "cloudformation", "terraform", "pricing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "yevice"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
tracing = { workspace = true }
yevice-core = { workspace = true }
yevice-engine = { workspace = true }
yevice-solver = { workspace = true }
yevice-output = { workspace = true }
yevice-pricing = { workspace = true }
yevice-service-api = { workspace = true }
yevice-services-aws = { workspace = true }
yevice-services-gcp = { workspace = true }
yevice-wrangler = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }

[dev-dependencies]
yevice-cfn = { workspace = true }
serde_yaml_ng = { workspace = true }

[lints]
workspace = true
