[package]
name = "yevice-tf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Terraform HCL parser for the yevice cost-model toolkit"
keywords = ["aws", "cost", "cloudformation", "terraform", "pricing"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["hcl-rs"]

[dependencies]
yevice-core = { workspace = true }
yevice-service-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hcl-rs = "0.19"

[dev-dependencies]
yevice-pricing = { workspace = true }
yevice-services-aws = { workspace = true }
yevice-services-gcp = { workspace = true }

[lints]
workspace = true
