[package]
name = "yevice-services-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "AWS service cost implementations for the yevice cost-model toolkit"
keywords = ["aws", "cost", "cloudformation", "terraform", "pricing"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
yevice-core = { workspace = true }
yevice-pricing = { workspace = true }
yevice-service-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
