[package]
name = "yevice-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Discrete enumeration solver for yevice cost-optimization problems"
keywords = ["aws", "cost", "optimization", "finops"]
categories = ["development-tools"]

[dependencies]
yevice-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
